- Added settings page for player customization

--- a/scss/isset-video-publisher.scss
+++ b/scss/isset-video-publisher.scss
@@ -9,3 +9,5 @@
 @import 'blocks/livestream-block';
 @import 'upload';
 @import 'livestream';
+@import 'playerCustomizer';
+@import 'videoPlayerThemeIsset';
