--- a/scss/_admin.scss
+++ b/scss/_admin.scss
@@ -306,9 +306,54 @@
     padding: 20px;
   }
 
+  .iv-pt-10 {
+    padding-top: 10px;
+  }
+
   .isset-video-livestream-container {
     background-color: #333;
     min-height: 400px;
+  }
+
+  .iv-col-5 {
+    flex: 0 0 41.66667%;
+    max-width: 41.66667%;
+  }
+
+  .iv-col-7 {
+    flex: 0 0 58.33333%;
+    max-width: 58.33333%;
+  }
+
+  .iv-col-12 {
+    flex: 0 0 100%;
+    max-width: 100%;
+  }
+
+  .iv-col-5, .iv-col-7, .iv-col-12 {
+    position: relative;
+    width: 100%;
+  }
+
+  @media only screen and (min-width: 768px) {
+    .iv-col-md-7 {
+      flex: 0 0 58.33333%;
+      max-width: 58.33333%;
+    }
+
+    .iv-col-md-5 {
+      flex: 0 0 41.66667%;
+      max-width: 41.66667%;
+    }
+  }
+
+  .iv-row {
+    flex-direction: row;
+    flex-wrap: wrap;
+  }
+
+  .iv-wrap-reverse {
+    flex-wrap: wrap-reverse;
   }
 }
 
@@ -587,15 +632,15 @@
   z-index: 10000;
   color: #000;
 
-  &.success {
+  &.toast-success {
     background-color: #9ad06e;
   }
 
-  &.warning {
+  &.toast-warning {
     background-color: orange;
   }
 
-  &.error {
+  &.toast-error {
     background-color: #e57878;
   }
 }
