--- a/scss/videoPlayerThemeIsset.scss
+++ b/scss/videoPlayerThemeIsset.scss
@@ -210,3 +210,19 @@
 .vjs-chapters-button {
   display: none;
 }
+
+.video-js.vjs-fluid,
+.video-js.vjs-16-9,
+.video-js.vjs-4-3 {
+  width: 100%;
+  max-width: 100%;
+  height: 0;
+}
+
+.video-js.vjs-16-9 {
+  padding-top: 56.25%;
+}
+
+.video-js.vjs-4-3 {
+  padding-top: 75%;
+}
