--- a/scss/livestream.scss
+++ b/scss/livestream.scss
@@ -14,6 +14,11 @@
             }
         }
     }
+
+    .isset-video-copytext-container {
+        margin: 0;
+        padding: 0;
+    }
 }
 
 .isset-video-container {
