--- a/scss/playerCustomizer.scss
+++ b/scss/playerCustomizer.scss
@@ -13,6 +13,13 @@
         right: 0;
     }
 
+    @media only screen and (min-width: 768px) {
+        .iv-player-preview-column {
+            padding-left: 20px;
+            box-sizing: border-box;
+        }
+    }
+
     .player-custom-preview {
         .container-16-9 {
 
