--- a/scss/videoPlayerThemeIsset.scss
+++ b/scss/videoPlayerThemeIsset.scss
@@ -226,3 +226,18 @@
 .video-js.vjs-4-3 {
   padding-top: 75%;
 }
+
+.isset-video-livestream-player-container {
+  width: 100%;
+  max-width: 100%;
+  height: 0;
+  padding-top: 56.25%;
+  position: relative;
+
+  iframe {
+    position: absolute;
+    top: 0;
+    width: 100%;
+    height: 100%;
+  }
+}
