--- a/scss/_admin.scss
+++ b/scss/_admin.scss
@@ -303,7 +303,7 @@
   }
 
   .iv-bg-black {
-    background-color: #333;
+    background-color: #111;
   }
 
   .iv-p-20 {
@@ -423,6 +423,10 @@
 
 .video-publisher-p-2 {
   padding: 0.75rem !important;
+}
+
+.video-publisher-pl-0 {
+  padding-left: 0 !important;
 }
 
 .video-publisher-pl-2 {
